# xiaozhi-esp32

./: .gitignore  README.md
main/: AudioDevice.cc  CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc  mcp_server.cc
main/audio_codecs/: box_audio_codec.cc
main/boards/common/: board.cc  board.h  lamp_controller.h  ml307_board.cc  wifi_board.cc
main/boards/esp-box-3/: config.h  esp_box3_board.cc
main/boards/esp32-s3-touch-amoled-1.8/: esp32-s3-touch-amoled-1.8.cc
main/display/: clockfont.c  clockfont.h  display.cc  lcd_display.cc  lcd_display.h
